--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-1.12.2.min.js" integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <title>Peek-a-boo</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Peek-a-boo</h1>
+  <div class="container">
+    <h1>Peek-a-boo</h1>
+      <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
 
-      <p>Let's play peek-a-boo. Click here to see the surprise!</p>
+    <div id="walrus-hidden">
+      <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
+    </div>
 
+    <div id="walrus-showing">
+      <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
       <img src="img/walrus.jpg">
     </div>
-  </body>
+  </div>
+</body>
 </html>
