--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
   <div class="container">
     <h1>Peek-a-boo</h1>
       <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
-
-    <div id="walrus-hidden">
-      <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
-    </div>
-
-    <div id="walrus-showing">
-      <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
       <img src="img/walrus.jpg">
-    </div>
 
+      <p>Walrus slide down <span class="slide-down">Click here</span></p>
+      <p>Walrus slide up <span class="slide-up">Click here</span></p>
+      <p>Walrus slide toggle <span class="slide-toggle">Click here</span></p>
+      <p>Walrus fade in <span class="fade-in">Click here</span></p>
+      <p>Walrus fade out <span class="fade-out">Click here</span></p>
+      <p>Walrus fade toggle <span class="fade-toggle">Click here</span></p>
   </div>
 </body>
 </html>
