add a dark mode

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <p>Walrus fade in <span class="fade-in">Click here</span></p>
       <p>Walrus fade out <span class="fade-out">Click here</span></p>
       <p>Walrus fade toggle <span class="fade-toggle">Click here</span></p>
+
+      <button class="darkmode">Toggle dark mode</button>
   </div>
 </body>
 </html>
